<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="mainmenuVM" type="com.matthewsapplication.app.modules.mainmenu.data.viewmodel.MainmenuVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearMainMenu"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnleaflogotext"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_62pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowleaflogotext"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLeafLogoImage"
                    android:layout_height="@dimen/_159pxh"
                    android:layout_marginBottom="@dimen/_30pxv"
                    android:layout_width="@dimen/_133pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_imgleaflogo}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_imgleaflogo"/>
                <TextView android:id="@+id/txtLeafLogoText"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_43pxv"
                    android:layout_weight="0.45"
                    android:layout_width="0dp"
                    android:text="@{mainmenuVM.mainmenuModel.txtLeafLogoText}"
                    style="@style/txtUrbanistromanbold60" tools:text="@string/lbl_lant_md"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearDiseaseButton"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegreen_900cornerRadius">
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtLanguage"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_52pxh"
                    android:layout_marginStart="@dimen/_58pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:text="@{mainmenuVM.mainmenuModel.txtLanguage}"
                    style="@style/txtUrbanistromanbold30" tools:text="@string/msg_check_for_plant"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnYourGarden"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_26pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_26pxv"
                android:singleLine="true"
                android:text="@string/lbl_your_garden"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_your_garden"/>
        </LinearLayout>
        <ImageView android:id="@+id/imageGardenImage"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_204pxh"
            android:layout_marginBottom="@dimen/_17pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="@dimen/_332pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_gardenimage}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_gardenimage"/>
    </LinearLayout>
</layout>
