<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="growVM" type="com.matthewsapplication.app.modules.grow.data.viewmodel.GrowVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearGrow"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:id="@+id/txtGrowTextHead"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_90pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{growVM.growModel.txtGrowTextHead}"
            style="@style/txtUrbanistromansemibold45" tools:text="@string/lbl_grow"/>
        <ImageView android:id="@+id/imageCornImage"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_234pxh"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_64pxv"
            android:layout_width="@dimen/_376pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_cornimage}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_cornimage"/>
        <TextView android:id="@+id/txtGrowTextPara"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_95pxh"
            android:layout_marginStart="@dimen/_95pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:text="@{growVM.growModel.txtGrowTextPara}"
            style="@style/txtUrbanistromanregular30" tools:text="@string/msg_grow_and_keep_t"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearPositionFive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_94pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageSlideFiveOne"
                android:layout_height="@dimen/_29pxh"
                android:layout_width="@dimen/_25pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_slideonetwo"
                tools:ignore="ContentDescription" tools:src="@drawable/img_slideonetwo"/>
            <ImageView android:id="@+id/imageSlideFiveFOur"
                android:layout_height="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_width="@dimen/_25pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_slideonetwo"
                tools:ignore="ContentDescription" tools:src="@drawable/img_slideonetwo"/>
            <ImageView android:id="@+id/imageSlideFiveTwo"
                android:layout_height="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_width="@dimen/_25pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_slideonetwo"
                tools:ignore="ContentDescription" tools:src="@drawable/img_slideonetwo"/>
            <ImageView android:id="@+id/imageSlideFiveTHree"
                android:layout_height="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_width="@dimen/_25pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_slideonetwo"
                tools:ignore="ContentDescription" tools:src="@drawable/img_slideonetwo"/>
            <ImageView android:id="@+id/imageSlideFiveFive"
                android:layout_height="@dimen/_25pxh"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_width="@dimen/_25pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_slideonethree"
                tools:ignore="ContentDescription" tools:src="@drawable/img_slideonethree"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinueToMainMenu"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/msg_continue_to_mai"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/msg_continue_to_mai"/>
    </LinearLayout>
</layout>
